--- a/index.html
+++ b/index.html
@@ -17,20 +17,29 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Anik Ahmmed </span>World!</h1>
-            <h2>The mask</h2>
-            <p>She smiles, I cry.
-                She is outgoing, I am shy.
-                She loves, I am alone.
-                She is amazing, I am unknown.
-                She is beautiful, I am a mess.
-                She is happy, I am depressed.
-                My mask is perfect:
-                She hides me.</p>
+            <h2>Build Climber and Train Stopper</h2>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/anik-ahmmed-3158b1216/"> HIRE
                 ME</a>
         </div>
         <div class="half-width">
             <img src="images/anik1.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/anik3.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+
         </div>
     </section>
 </body>
