--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="Experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="experience-item">
+            <div id="wev-div" class="experience-item">
                 <h2>Full Stack Developer</h2>
                 <h3 class="orange-color">2022-present|Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -53,7 +53,7 @@
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="experience-item">
+            <div id="wev-dev-experience" class="experience-item">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2022-2024|Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
@@ -64,6 +64,9 @@
 
 
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
